--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,15 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: 简算技术
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 化繁为简，算力提效，技术赋能
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/113450795?s=200&v=4
+
+favicon: images/jiansuan.png
 
 #
 # Flags below are optional
@@ -18,15 +20,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: mojianhao@jiansuan.tech
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/JiansuanTech
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +43,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://jiansuantech.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
