fix footer github link

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   email: mojianhao@jiansuan.tech
   facebook:
   flickr:
-  github: https://github.com/JiansuanTech
+  github: jiansuantech
   instagram:
   linkedin:
   pinterest:
