translate to en & add reports

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: 简算技术
+name: 简算技术 | Jiansuan Tech
 
 # Short bio or description (displayed in the header)
-description: 化繁为简，算力提效，技术赋能
+description: 化繁为简，算力提效 | Simplify complexity, improve computing power
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/113450795?s=200&v=4
